<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ZipMe</string>
    <string name="title_section1">Inbox</string>
    <string name="title_section2">Friends</string>
    <string name="title_section3">Section 3</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="login_button_label">SIGN IN</string>
    <string name="signup_Text">Don\'t have an account ? Sign Up!</string>
    <string name="sign_up_button_label">SIGN UP</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="signup_error_message">Please Enter All information</string>
    <string name="signup_error_title">Oops</string>
    <string name="error_title">We\'re Sorry</string>
    <string name="login_error_message">Please make Sure to Enter User Name and Password</string>
    <string name="login_error_title">Oops</string>
    <string name="menu_logout_lable">Logout</string>
    <string name="empty_inbox_label">No new message</string>
    <string name="empty_friends_label">Add friends to begin</string>
    <string name="menu_edit_friends_label">Edit Friends</string>
    <string name="title_activity_edit_friends">Edit Friends</string>
    <string name="menu_camera_label">Camera</string>
    <string name="external_storage_error">There was a problem accessing your device\'s external storage</string>

    <string-array name="camera_choices">
        <item>Take Picture</item>
        <item>Take Video</item>
        <item>Choose Picture</item>
        <item>Choose Video</item>
    </string-array>

    <string name="general_error">Sorry, there was an error!</string>
    <string name="video_size_warning">Selected video must be less than 10MB</string>
    <string name="error_opening_file">There was issue with selected file</string>
    <string name="error_file_zise_too_large">Selected file is too large!.Select another file.</string>
    <string name="title_activity_recipients">Choose Recipients</string>
    <string name="empty_recipients_list">Ready to Make Friends</string>
    <string name="action_send_label">Send</string>
    <string name="error_selecting_file">There was an error with selected File. Please select different file.</string>
    <string name="error_selecting_file_title">We\'re Sorry!</string>
    <string name="success_message">Message sent!</string>
    <string name="error_sending_message">There was error sending you message. Please try again</string>
    <string name="title_activity_view_image">ZipMe</string>
    <string name="subtitle_label">Let\'s Share More</string>
    <string name="image_view_desp">an image view desc</string>
    <string name="button_divider_label">Button Divider</string>
    <string name="user_avatar_label">User avatar</string>
    <string name="content_desc_user_checkmark">User checkmark</string>
    <string name="push_notification">You have a new message from %s!</string>
</resources>
