<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".LoginActivity"
    style="@style/AuthBackground">

    <TextView
        style="@style/AuthTitle"
        android:id="@+id/title"/>

    <TextView
        android:id="@+id/subtitle"
        style="@style/AuthSubTitle"/>

    <LinearLayout
        android:id="@+id/editTextLayout"
        style="@style/AuthFieldContainer">

        <EditText
            android:id="@+id/usernameField"
            android:hint="@string/username_hint"
            style="@style/AuthUserCredential"/>
        <requestFocus/>

        <EditText
            android:id="@+id/passwordField"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            style="@style/AuthUserCredential"/>

        </LinearLayout>


    <Button
        android:text="@string/login_button_label"
        android:id="@+id/loginButton"
        android:layout_below="@id/editTextLayout"
        style="@style/AuthButton"
    />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sign_up_text"
        android:text="@string/signup_Text"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/loginButton"
        android:layout_marginTop="12dp"
        android:textColor="@android:color/white"/>
</RelativeLayout>
