<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/AuthBackground"
    tools:context="com.funq.zipak.com.funq.zipak.ui.SignUpActivity">

    <TextView
        style="@style/AuthTitle"
        android:id="@id/title"/>

    <TextView
        android:id="@id/subtitle"
        style="@style/AuthSubTitle"/>

    <LinearLayout
        android:id="@+id/editTextLayout"
        style="@style/AuthFieldContainer">

        <EditText
            android:id="@id/usernameField"
            android:hint="@string/username_hint"
            style="@style/AuthUserCredential"/>
        <requestFocus/>

        <EditText
            android:id="@id/passwordField"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            style="@style/AuthUserCredential"/>

        <EditText
            android:id="@+id/emailField"
            android:hint="@string/email_hint"
            style="@style/AuthUserCredential"
            android:inputType="textEmailAddress"/>

    </LinearLayout>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextLayout"
        android:layout_centerHorizontal="true"
        android:id="@+id/buttonDivider"
        android:src="@drawable/button_divider"
        android:contentDescription="@string/button_divider_label"/>

    <Button
        android:id="@+id/signupButton"
        android:text="@string/sign_up_button_label"
        android:layout_below="@id/editTextLayout"
        style="@style/AuthSignupButton"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@id/buttonDivider"
        android:layout_marginRight="0dp"
        />

    <Button
        android:id="@+id/cancelButton"
        android:text="CANCEL"
        android:layout_below="@id/editTextLayout"
        style="@style/AuthSignupButton"
        android:layout_alignParentRight="true"
        android:layout_toEndOf="@id/buttonDivider"
    android:layout_marginLeft="0dp"/>

</RelativeLayout>
